divs overlapping fix

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,8 +4,8 @@ footer {
   align-items: center;
   position: fixed;
   left: 0;
-  top: 0;
-  height: 100vh;
+  top: 10vh;
+  height: 90vh;
   width: 35px;
   p {
     color: rgba(46, 27, 20, 0.3);
